<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">IntroMi</string>

    <!-- IntroMe -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    

    <!-- DeviceListActivity -->
    <string name="scanning">looking for cards</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="my_card">My card</string>
    <string name="future_card">Future card</string>
    <string name="saved_cards">Saved cards</string>

    <!-- User information -->

    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email">Email address</string>
    <string name="linkedin_site">Linkedin/site</string>
    <string name="about_me">About me</string>
    <string name="lookin_for">looking for</string>
    <string name="choose_photo">Choose photo</string>
    <string name="save_details">Save</string>
    <string name="head_line">Professional head line</string>
    <string name="mission">Mission</string>
    <string name="photo_profile">photo</string>
    <string name="seperator_line">seperator</string>
    <string name="seperator_line1">seperator1</string>
    <string name="left_bracket">left bracket</string>
    <string name="right_bracket">right bracket</string>

    <!-- List context menu -->

    <string name="save_to_contacts">Save to contacts</string>
    <string name="Save_as_IntroMi_card">Save IntroMi card</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="scan_interval">Scan interval(Seconds)</string>
    <string name="title_activity_main">SavedCardsList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_saved_cards_list">SavedCardsList</string>

</resources>
