<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:fitsSystemWindows="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scrollbarStyle="outsideOverlay"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/seperator"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/seperator_line"
        android:scaleType="fitXY"
        android:src="@drawable/separator" />

    <RelativeLayout
        android:id="@+id/card_preview"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/photo"
            android:layout_width="145dp"
            android:layout_height="200dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/photo_profile"
            android:maxHeight="150dp"
            android:maxWidth="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            android:layout_toRightOf="@+id/photo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeadLine"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/pbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/headLinePreview"
            android:layout_alignRight="@+id/photo"
            android:layout_marginRight="36dp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/seperator1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/seperator_line1"
        android:scaleType="fitXY"
        android:src="@drawable/separator" />

    <LinearLayout
        android:id="@+id/mission"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:background="@drawable/card_blue_back2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/leftBrackets"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:minHeight="15dp"
            android:minWidth="15dp"
            android:src="@drawable/quotes_white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/tvMission"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:fontFamily="@string/app_name"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rightBrackets"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:minHeight="15dp"
            android:minWidth="15dp"
            android:src="@drawable/quotes_white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/White"
            android:textSize="70sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/seperator2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/separator" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/mail_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageEmail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/email_button_selector"
                    android:clickable="true"
                    android:maxHeight="60dp"
                    android:maxWidth="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:lines="3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <ImageView
                android:id="@+id/emailImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/card_blue_back" />

            <LinearLayout
                android:id="@+id/phone_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imagePhone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/phone_button_selector"
                    android:clickable="true"
                    android:maxHeight="60dp"
                    android:maxWidth="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/card_blue_back" />

            <LinearLayout
                android:id="@+id/phone_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageSite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/link_button_selector"
                    android:clickable="true"
                    android:maxHeight="60dp"
                    android:maxWidth="60dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/tv1Site"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/card_blue_back" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ImageView08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:cropToPadding="false"
        android:paddingBottom="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/separator" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:clickable="true"
        android:gravity="center|bottom"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgViewShare"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/share_button_selector" />

        <ImageView
            android:id="@+id/btSaveToFavourites"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/fav_button_selector" />

        <ImageView
            android:id="@+id/imageViewPhoneBook"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/add_to_contacts_button_selector" />
    </LinearLayout>

</LinearLayout>